1.7.6
---
- Readded .exr code.
- Redefined clamping values in il.h.
- Added 64-bit integer types.
- Fixed bug in iRegisterLoad (https://sourceforge.net/forum/message.php?msg_id=5973761).

2009-01-02 Matěj Týč <bubla@sf.net>
	* src-{IL,ILU,ILUT}/src/*_internal.c: Hopefully resolved the
	HAVE_CONFIG_H thing once for all :-)
	* src-IL/src/il_exr.cpp: Undefined OPENEXR_DLL if we are not on
	Windows (=> when HAVE_CONFIG_H is not defined)
	* src-IL/src/il_io.c:765: Fixed a typo
	* src-IL/src/il_vtf.c: Added min and max macros to the beginning
	* docs/Devil_manual.texi: Corrected typos and missing @code and other
	formatting stuff, corrected image names and incorrect usage of @xref
	etc. that prevented compilation
	* build setup (Makefile.am and configure.ac): Added support for
	compilation of EXR and WDP formats + various other tweaks.

1.7.5
---
- Added check in iluScale for parameters of 0, which would cause a crash.
- Cleaned up the tons of extra lines in il_dds.c.
- Added .vtf support.
- Fixed bug in file caching if the buffer was too small.
- Fixed crash saving .tga files if no author name string present.
- Fixed crash in ilActive* if a number too large is specified.
- Added support for alpha-only formats (IL_ALPHA).
- Better conversion from lower bpp to higher bpp data.

1.7.4
---
- Added German translations of error codes in ILU.
- Added ilutGLSubTex back to ilut.h.
- Added 64-bit Windows configurations to projects.
- Fixed various 64-bit bugs.
- Fixed dependency of ILUT on MSVCRT DLL.
- Redefined ILsizei as size_t.
- Changed allocation functions to ILsizei from ILuint.
- Removed ILvoid, since it is now illegal in GCC 4.2.
- Started rewriting Windows HD Photo support from scratch.
- Started DirectX 10 code.
- Changed ilSaveCHeader's second argument to char*.
- Changed ilutGLScreenie to use Unicode if needed.
- Fixed various Unicode problems with ilSetString.
- Added progressive saving of .jpg with IL_JPG_PROGRESSIVE flag.
- Added more to the Fortran wrapper.